--- a/site/app/views/includes/head.jade
+++ b/site/app/views/includes/head.jade
@@ -9,7 +9,7 @@ head
   meta(name="description", content="MEAN - A Modern Stack: MongoDB, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).")
 
   link(href='/img/icons/favicon.ico', rel='shortcut icon', type='image/x-icon')
-  
+
   meta(property='fb:app_id', content='APP_ID')
   meta(property='og:title', content='#{appName} - #{title}')
   meta(property='og:description', content='MEAN - A Modern Stack: MongoDB, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).')
@@ -19,11 +19,13 @@ head
   meta(property='og:site_name', content='MEAN - A Modern Stack')
   meta(property='fb:admins', content='APP_ADMIN')
 
-  link(rel='stylesheet', href='/lib/bootstrap/docs/assets/css/bootstrap.css')
+  link(rel='stylesheet', href='/lib/bootstrap/dist/css/bootstrap.css')
+  link(rel='stylesheet', href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css")
   //- link(rel='stylesheet', href='/lib/bootstrap/dist/css/bootstrap-responsive.css')
   link(rel='stylesheet', href='/css/common.css')
-
   link(rel='stylesheet', href='/css/views/articles.css')
+  link(rel='stylesheet', href='/css/style.css')
+
 
   //if lt IE 9
     script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
