--- a/site/app/views/layouts/default.jade
+++ b/site/app/views/layouts/default.jade
@@ -2,8 +2,9 @@ doctype html
 html(lang='en', xmlns='http://www.w3.org/1999/xhtml', xmlns:fb='https://www.facebook.com/2008/fbml', itemscope='itemscope', itemtype='http://schema.org/Product')
   include ../includes/head
   body
-    .navbar.navbar-inverse.navbar-fixed-top(data-ng-include="'views/header.html'", data-role="navigation")
-    section.content
-      section.container
-        block content
+    headroom.navbar.navbar-inverse.navbar-fixed-top(tolerance='5' offset='205' classes="{'initial': 'animated','pinned': 'slideInDown','unpinned': 'slideOutUp'}" data-ng-include="'views/header.html'", data-role="navigation")
+    headroom.header-circle(tolerance='5' offset='205' classes="{'initial': 'animated','pinned': 'slideInDown','unpinned': 'slideOutUp'}" style="position:fixed; right:-20px;")
+        a.header-circle-inner(href='/pre-order')
+            span PRE-ORDER
+    block content
     include ../includes/foot
