--- a/site/public/views/header.html
+++ b/site/public/views/header.html
@@ -1,28 +1,41 @@
-<div class="navbar-inner" data-ng-controller="HeaderController">
-    <ul class="nav">
-        <li>
-            <a class="brand" href="/">MEAN - A Modern Stack</a>
-        </li>
-        <li data-ng-repeat="item in menu" data-ng-show="global.user" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
-            <a href="#!/{{item.link}}">{{item.title}}</a>
-        </li>
+<div data-ng-controller="HeaderController">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand navbar-active" href="/">{{global.brand}}</a>
+  </div>
+
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li data-ng-repeat="item in menu" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
+        <a href="#!/{{item.link}}">{{item.title}}</a>
+      </li>
     </ul>
-    <ul class="nav pull-right" data-ng-hide="global.authenticated">
-        <li><a href="signup">Signup</a>
-        </li>
-        <li class="divider-vertical"></li>
-        <li><a href="signin">Signin</a>
-        </li>
+    <ul class="nav navbar-nav navbar-right" data-ng-hide="global.authenticated || global.prelaunch">
+      <li><a href="signup">Signup</a>
+      </li>
+      <li><a href="signin">Signin</a>
+      </li>
     </ul>
-    <ul class="nav pull-right" data-ng-show="global.authenticated">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-				{{global.user.name}} <b class="caret"></b>
-			</a>
-            <ul class="dropdown-menu">
-                <li><a href="/signout">Signout</a>
-                </li>
-            </ul>
-        </li>
+    <ul class="nav navbar-nav navbar-right social hidden-xs">
+      <li><a href="signup"><i class="fa fa-twitter-square"></i></a><a><i class="fa fa-twitter-square"></i></a></li>
+      <li><a href="signup"><i class="fa fa-facebook-square"></i> </a></li>
+      <li><a href="signup"><i class="fa fa-google-plus-square"></i> </a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right" data-ng-show="global.authenticated && !global.prelaunch">
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          {{global.user.name}} <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="/signout">Signout</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
 </div>
